# ChangeLog for net-www/mod_lisp
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-www/mod_lisp/ChangeLog,v 1.3 2004/04/26 16:01:59 zul Exp $

  27 Apr 2004; Chuck Short <zul@gentoo.org> mod_lisp-2.32.ebuild:
  Marked stable for x86.

*mod_lisp-2.32 (19 Jun 2003)
 
  13 Jul 2003; Daniel Ahlberg <aliz@gentoo.org> :
  Added missing changelog entry.

*mod_lisp-2.31 (18 Jun 2003)

  18 Jun 2003; Matthew Kennedy <mkennedy@gentoo.org> :
  Initial import.
