@@ -1,4 +1,7 @@
 MD5 5cea6e3ebc9b2ae1e16421ec72c94cbc mod_lisp-2.32.ebuild 734
-MD5 f2b268830ae09b54008b727ce0a7ca44 ChangeLog 522
+MD5 a71045ba8adb0804379fd74fd80681a4 ChangeLog 696
 MD5 d2da0e45d7e39184d1cb7abbe3879086 metadata.xml 159
+MD5 3fb1761a71f31909e264fa4f6c54eb44 mod_lisp-2.33.ebuild 769
 MD5 848495fae43277daf91aee9c8e502437 files/digest-mod_lisp-2.32 59
+MD5 d8001ccbd2db0fc6173a2d35bb90a8d7 files/digest-mod_lisp-2.33 59
+MD5 346dd4370a81dcb6a535749c09cebedd files/Readme.Gentoo 123
