@@ -1,0 +1,4 @@
+Go to http://lisp.t2100cdt.kippona.net/lispy/home for a tutorial on how to use mod_lisp.
+
+April 26, 20003
+zul @ gentoo.org
