@@ -1,6 +1,12 @@
 # ChangeLog for net-www/mod_lisp
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-www/mod_lisp/ChangeLog,v 1.3 2004/04/26 16:01:59 zul Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/mod_lisp/ChangeLog,v 1.4 2004/04/26 16:04:59 zul Exp $
+
+*mod_lisp-2.33 (27 Apr 2004)
+
+  27 Apr 2004; Chuck Short <zul@gentoo.org> mod_lisp-2.33.ebuild,
+  files/Readme.Gentoo:
+  Version bump. Added Readme with link to a tutorial.
 
   27 Apr 2004; Chuck Short <zul@gentoo.org> mod_lisp-2.32.ebuild:
   Marked stable for x86.
